# R3ndr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: camera.cpp  camera.h  cube.cpp  cube.h  cubeWithNormals.h  line.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shaderedCube.h  text_renderer.cpp  text_renderer.h  texturedCube.cpp  texturedCube.h  window.cpp  window.h
src/shaders/: ambientLighting.shader  baseShader.shader  difuseLightShader.shader  lightShader.shader  specularLighting.shader  textShader.shader  texturedShader.shader
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
